--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
+    <style>
+      
+    </style>
+    <title>Timmy Laker</title>
   </head>
+  <body>
+    <script type="text/javascript">
+      
+    </script>
+  </body>
 </html>
